...
            }
        }
    }
    
    func showAlertError() {
        
        let alert = UIAlertController(title: "Error", message: "An error occurred while trying to fetch YouTube videos.  Press button below to try again", preferredStyle: UIAlertControllerStyle.Alert)
        let action = Action.init(title: "Try Again", style: UIAlertActionStyle.Default, handler: { [weak self](alert: UIAlertAction!)  -> () in
            
            if let strongSelf = self {
                strongSelf.loadVideoData()
            }
            })
        alert.addAction(action)
...
